--- a/package.json
+++ b/package.json
@@ -14,23 +14,26 @@
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "autoprefixer": "^10.1.0",
     "css-loader": "^5.0.1",
+    "eslint-plugin-react": "^7.21.5",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.3.3",
+    "postcss-fail-on-warn": "^0.1.0",
+    "postcss-loader": "^4.1.0",
     "source-map-loader": "^1.1.3",
     "style-loader": "^2.0.0",
+    "tailwindcss": "^2.0.2",
     "ts-loader": "^8.0.12",
     "typescript": "^4.1.3",
+    "url-loader": "^4.1.1",
     "webpack": "^5.10.1",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "eslint-plugin-react": "^7.21.5",
-    "file-loader": "^6.2.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "tailwindcss": "^2.0.2",
-    "url-loader": "^4.1.1"
+    "react-dom": "^17.0.1"
   }
 }
